reports/pandas.log
Traceback (most recent call last):
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/asyncio/base_events.py", line 583, in run_until_complete
    return future.result()
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/site-packages/nbclient/client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/alandmesser/anaconda3/envs/workshops/lib/python3.7/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
Pandas Datenformat
* Dataframe
* Series

Pandas Frame erstellen
Erste Zeilen ausgeben
Shape ausgeben
Info - Summary
Spalten ausgeben
Index ausgeben
Eine Zeile auswählen
Mehrere Zeilen auswählen
Filter Rows by Column Value
Plot
Plot Scatter
Create new Columns
Mean of column
Median of two columns
describe
count()
Werte sortieren
concat

Daten aus CSV lesen
DataFrame speichern
DataFrame auslesen

------------------

[0;36m  File [0;32m"<ipython-input-1-9275b3798f52>"[0;36m, line [0;32m1[0m
[0;31m    Pandas Datenformat[0m
[0m                     ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-9275b3798f52>, line 1)

